Fixed up some alignment issues and link breaks

--- a/resources/assets/scss/grapevine/sections/_header.scss
+++ b/resources/assets/scss/grapevine/sections/_header.scss
@@ -28,9 +28,9 @@ section.header {
 
 	.breadcrumbs {
 		background: $colour-secondary;
-		padding: 15px 0;
+		padding: 15px 0 15px 30px;
 
-		.breadcrumb {
+		ol {
 			background: none;
 			margin: 0;
 			padding: 0;
